# mono-bazel

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
projects/cpp_calculator/: BUILD  input.txt
projects/cpp_calculator/src/: calculator.cpp  calculator.h  main.cpp
projects/cpp_calculator/tests/: calculator_test.cpp
projects/cpp_web/: BUILD
projects/cpp_web/src/: main.cpp
projects/cute/: BUILD
projects/java_calculator/: BUILD
projects/java_calculator/src/main/java/com/example/: Calculator.java  CalculatorApp.java
projects/java_calculator/src/test/java/com/example/: CalculatorTest.java
projects/java_web/: BUILD
projects/java_web/src/main/java/com/example/: CalculatorController.java  MainApplication.java
projects/kotlin_calculator/: BUILD
projects/kotlin_calculator/src/main/kotlin/com/example/: Calculator.kt
projects/kotlin_calculator/src/test/kotlin/com/example/: CalculatorTest.kt
projects/kotlin_web/: BUILD
projects/kotlin_web/src/main/kotlin/com/example/: MainVerticle.kt
projects/python_calculator/: BUILD  calculator.py  test_calculator.py
projects/python_web/: BUILD  python_web.py
